testsuite/tests/ghc-regress/rename/should_fail/rnfail028.hs
module ShouldFail ( module List ) where
